Fix SVG on Safari.

--- a/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-setup-cta-banner.scss
+++ b/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-setup-cta-banner.scss
@@ -26,6 +26,7 @@
 			justify-content: center;
 
 			svg {
+				flex: 1;
 				max-height: 136px;
 
 				@media (min-width: $width-desktop + 1 + px) {
